FIX: Spacing of header title on homepage [619]

--- a/common/common.scss
+++ b/common/common.scss
@@ -281,6 +281,7 @@ nav.post-controls button.create {
     }
     .info-column {
       width: 53%;
+      margin-right: 17%;
       h1 {
         font-size: 30pt;
       }
